# jsonany

./: CMakeLists.txt  README.md  boost_any.h  json_any.h  json_encoder.h  main.cpp  main1.cpp
demo1/: any.h  boost_any.h  json_any.h  json_encoder.h  main.cpp
